# vitrobud-opencads

./: .dockerignore  .env.dist  .gitignore  COMMANDS.md  Cargo.toml  Containerfile  INTEGRATION_GAPS.md  PERFORMANCE.md  README.md  ROADMAP.md  STATUSBAR.md  Trunk.toml  compose.override.example.yaml  compose.yaml  index.html
.ai/: guidelines.md
.ai/flows/: bugfix.md  design-to-code.md  task-continuation.md
.ai/meta/: audit.md  discovery.md  guidelines-example-shopware.md  init.md  meta.md
.ai/prd/: prd.md  requirements-template.md  task-index-template.md
.ai/project/: context.md  tech-spec.md
.ai/wiki/: README.md  context-policy.md  heartbeat-template.md  observations-template.md  reflection-template.md  task-summary-template.md
.github/workflows/: release.yml  windows-test-build.yml
assets/fonts/: ltypeshp.lff
container/: Caddyfile
crates/dwg-thumbnailer/: Cargo.toml  README.md
crates/dwg-thumbnailer-win/: Cargo.toml
crates/dwg-thumbnailer-win/src/: lib.rs
crates/dwg-thumbnailer/macos/: Info.plist  ThumbnailProvider.swift  dwg_thumbnailer.h
crates/dwg-thumbnailer/src/: lib.rs
crates/ocs_plugin_api/: Cargo.toml
crates/plugin-template-api2/: Cargo.toml
crates/plugin-template-api2/src/: lib.rs
dev-ops/: backup  cleanup  compose  install-systemd-user-backup  install-systemd-user-unit  reset-runtime  setup  setup-compose-provider  shutdown  start  update
dev-ops/systemd/: vitrobud-opencads-backup.service.in  vitrobud-opencads-backup.timer.in  vitrobud-opencads.service.in
docs/: backup-and-retention.md  container-quickstart.md  cutover-and-rollback.md  deployment-plan.md  external-reverse-proxy.md  pane-grid-migration.md  parallel-start-plan.md  plugin-architecture.md  privacy-boundary.md  private-runtime-migration-checklist.md  upstream-maintenance.md
docs/automation/: README.md  ocs.py
docs/plugin-template/: Cargo.toml  README.md
docs/plugin-template-v2/: Cargo.toml  DESIGN.md
docs/plugin-template-v2/src/: lib.rs
docs/plugin-template/.github/workflows/: release.yml
docs/plugin-template/src/: lib.rs
examples/: find_raster.rs  inspect_insert.rs  time_open.rs
packaging/: Info.plist  OpenCADStudio.desktop
packaging/windows/: main.wxs
plugins/: registry.json
src/: .env.dist  cli.rs  command.rs  lib.rs  linetypes.rs  main.rs  snap.rs  sys.rs  update_check.rs
src/app/: automation.rs  cmd_result.rs  command_driver.rs  commands.rs  document.rs  helpers.rs  history.rs  layers.rs  mod.rs  model_ops.rs  mtext_editor.rs  plugin_host.rs  properties.rs  recent.rs  settings.rs  style_ops.rs  text_inline.rs  update.rs  view.rs
src/command/: mod.rs
src/entities/: arc.rs  attribute.rs  circle.rs  common.rs  dimension.rs  ellipse.rs  hatch.rs  insert.rs  leader.rs  line.rs  lwpolyline.rs  mesh.rs  mline.rs  mod.rs  mtext.rs  multileader.rs  names.rs  ole2frame.rs  point.rs  polyline.rs  raster_image.rs  ray.rs  shape.rs  solid.rs  solid3d.rs  spline.rs  table.rs  text.rs  text_support.rs  tolerance.rs  traits.rs  underlay.rs  viewport.rs
src/io/: file_association.rs  (+11 more)
tests/: block_hatch_export.rs  text_font_rendering.rs
(+371 files in other folders)
