[package]
name = "dwg-thumbnailer"
version = "0.1.0"
edition = "2021"
description = "Extracts the embedded preview image from a DWG file for OS file-manager thumbnails"
license = "MIT OR Apache-2.0"

# Shared extraction core. Consumers: OpenCADStudio (Linux, via its own
# `--dwg-thumbnail` mode), the Windows `IThumbnailProvider` DLL, and the macOS
# QuickLook extension.
#   rlib      — OCS and the Windows DLL call `extract` directly.
#   staticlib — the macOS QuickLook extension links the C ABI (`dwg_thumbnail_png`).
[lib]
name = "dwg_thumbnailer"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
