[package]
name = "plugin-template-v2"
version = "0.1.0"
edition = "2021"
description = "Example OpenCAD Studio plugin demonstrating the shared-memory DocumentReader API."
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
ocs_plugin_api = { path = "../../crates/ocs_plugin_api", features = ["host"] }
acadrust = "0.3.4"
